docs([config]/全局): 更新重构文档至v2.6，记录PHASE-0~P2-2c全部执行记录
- REFACTOR_PLAN.md v2.0: 更新进度总览，PHASE-2完成率50%
- REFACTOR_TASKS.md: 新增P2-2a/P2-2b/P2-2c任务及补偿任务
- REFACTOR_EXECUTE.md v2.6: 新增P2-2a/P2-2b/P2-2c完整执行记录
- PROGRESS_REPORT.md v2.6: 更新整体进度+已完成详情+修改记录
- DOC_UPDATE_GUIDELINES.md: 更新文档版本号
- .trae/rules/*.md: 更新项目上下文记忆和审查规则